// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoInput fires onSubmit & empties input value when enabled button is clicked and disables button 1`] = `
<DocumentFragment>
  <div
    class="flex items-end gap-2"
  >
    <div
      class="flex flex-col gap-2"
    >
      <div
        class="ml-1"
      >
        <label
          class="text-xl font-semibold cursor-pointer select-none text-primary-dark"
          for="todo-input"
        >
          Todo Title
        </label>
      </div>
      <input
        class="p-2 text-base font-medium border rounded-lg w-60 border-primary-dark focus:outline-none focus:border-accent placeholder-primary-dark-disabled text-primary-dark"
        id="todo-input"
        placeholder="Enter a Todo title..."
        value=""
      />
    </div>
    <button
      class="inline text-white font-medium bg-primary-dark border cursor-pointer select-none border-primary-dark disabled:bg-primary-dark-disabled disabled:cursor-not-allowed focus:outline-none focus:border-accent text-base p-2 rounded-lg"
      disabled=""
      type="button"
    >
      Submit
    </button>
  </div>
</DocumentFragment>
`;

exports[`TodoInput renders default state with correct label, without any value and with correct placeholder in input and submit button disabled 1`] = `
<DocumentFragment>
  <div
    class="flex items-end gap-2"
  >
    <div
      class="flex flex-col gap-2"
    >
      <div
        class="ml-1"
      >
        <label
          class="text-xl font-semibold cursor-pointer select-none text-primary-dark"
          for="todo-input"
        >
          Todo Title
        </label>
      </div>
      <input
        class="p-2 text-base font-medium border rounded-lg w-60 border-primary-dark focus:outline-none focus:border-accent placeholder-primary-dark-disabled text-primary-dark"
        id="todo-input"
        placeholder="Enter a Todo title..."
        value=""
      />
    </div>
    <button
      class="inline text-white font-medium bg-primary-dark border cursor-pointer select-none border-primary-dark disabled:bg-primary-dark-disabled disabled:cursor-not-allowed focus:outline-none focus:border-accent text-base p-2 rounded-lg"
      disabled=""
      type="button"
    >
      Submit
    </button>
  </div>
</DocumentFragment>
`;

exports[`TodoInput renders input field that can be type into resulting in enabled submit button 1`] = `
<DocumentFragment>
  <div
    class="flex items-end gap-2"
  >
    <div
      class="flex flex-col gap-2"
    >
      <div
        class="ml-1"
      >
        <label
          class="text-xl font-semibold cursor-pointer select-none text-primary-dark"
          for="todo-input"
        >
          Todo Title
        </label>
      </div>
      <input
        class="p-2 text-base font-medium border rounded-lg w-60 border-primary-dark focus:outline-none focus:border-accent placeholder-primary-dark-disabled text-primary-dark"
        id="todo-input"
        placeholder="Enter a Todo title..."
        value="test todo"
      />
    </div>
    <button
      class="inline text-white font-medium bg-primary-dark border cursor-pointer select-none border-primary-dark disabled:bg-primary-dark-disabled disabled:cursor-not-allowed focus:outline-none focus:border-accent text-base p-2 rounded-lg"
      type="button"
    >
      Submit
    </button>
  </div>
</DocumentFragment>
`;
